fix: remove footer on mobile

--- a/styles/base/_global.scss
+++ b/styles/base/_global.scss
@@ -77,6 +77,11 @@ main {
   margin-top: rem(50);
   margin-bottom: 50px;
   color: color(white);
+  display: none;
+
+  @include min-width(500) {
+    display: block;
+  }
 
   a {
     color: color(white);
